<?xml version="1.0"?>
<package>
  <name>gripbot_sim_kinematics</name>
  <version>1.2.12</version>
  <description>
    GripBot Kinematics for the FK, IK and the gravity compensation calculations
  </description>

  <maintainer email="contact@yannickroberts.com">
    Yannick Roberts.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://yannickroberts.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Yannick Roberts.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>

  <run_depend>kdl_parser</run_depend>

</package>


